# initos

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.sh  dbuild.sh  dev-machine.sh  efi.sh  env  flake.nix  push.sh  setup.sh  sign.sh
.cargo/: config.toml
docs/: TODO.md  boot_sequence.md  build.md  debian-kernel.md  debian.md  design.md  efi_keys.md  fs-verity.md  insecure_mode.md  kernel.md  modprobe_error.md  sidecar_os.md  signing.md  tpm.md  vm.md
initramfs/: init
linux/: AGENT.md  AGENTS.md  block.fragment  builtins-host.fragment  builtins.fragment  display.fragment  efi.fragment  flake.nix  host-chromeos.fragment  host-lenovo.fragment  host-rust.fragment  host.merge-config  kernel-cloud.nix  kernel-host.nix  kernel.md  mods2.fragment  net.fragment  networking.fragment  tpm2.fragment  usb.fragment  y-remove.fragment
mkinitfs/: README.md
nix/: kernel-cloud.nix  kernel-host.nix
notes/: TODO.md  boot_sequence.md  choices_options.md  containers.md  control_plane.md  design.md  disks.md  efi_keys.md  images.md  in_place_install.md  install.md  istio.md  kasmvnc.md  machine_id.md  nvidia.md  openwrt.md  setup-builder.md  sidecar_os.md  systemd.md  tpm.md  useful_containers.md  virtiofs.md  vm.md  wayland.md
prebuilt/: OVMF_VARS.fd  linux.efi.stub
recovery/: init
scripts/: assemble_artifacts.sh  build-latest-nixpkgs.sh  build.sh  container_build.sh  e2e.sh  mkrootfs.sh  setup-deps.sh  setup-kernel  shell.nix  sign.sh  test_sign_bwrap.sh  test_sign_docker.sh  test_sign_sandbox_inner.sh
src/: boot.rs  cmd.rs  efi.rs  fscrypt.rs  lib.rs  main.rs  mount.rs  tpm2.rs  verify.rs  verity.rs
stub/: Makefile  README.md
testdata/: test_setup
tests/: db-d719b2cb-3d3a-4596-a3bc-dad00e67656f  run_qemu.sh  test_encrypt_decrypt.sh  test_img.sh  test_qemu_efi.sh  test_sign_bwrap.sh  test_sign_sandbox_inner.sh  test_vm_cloud_hypervisor_acpi_s5.sh  test_vm_echo_latency.sh  test_vm_microvm_echo.sh  test_vm_qemu_echo.sh  test_vm_vrun_cloud_hypervisor_echo.sh  test_vm_vrun_crosvm_echo.sh  test_vrun_pod_name.sh  test_vrun_stop_cleanup.sh  tpm2_tests.rs  verify_test.rs
tools/: Dockerfile.base  Dockerfile.boot
(+181 files in other folders)
